--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,7 @@
-QUEST_PRIORITY=true
-MINUTES_BATTLES_INTERVAL=30
+QUEST_PRIORITY=false
+MINUTES_BATTLES_INTERVAL=20
 CLAIM_SEASON_REWARD=false
-ACCOUNT=lowercase_username
-PASSWORD=postingkey
+ACCOUNT=thyiacloud
+PASSWORD=5J7N7Yutv5ByXZZWDSdv8ZEKLKQYoQdps6p7BN4oeFZvLQsYSbg
+API=https://45.77.228.203:3000/
+API_VERSION=2
